# vc-authn-oidc

./: .README.md.swp  .dockerignore  .gitattributes  .gitignore  .tgitconfig  COMPLIANCE.yaml  README.md  index.yaml  pyproject.toml
.github/: dependabot.yml  stale.yml
.github/actions/chart_releaser/: cr.sh  cr.yaml
.github/workflows/: chart_release.yaml  controller_unittests.yml  on_push_main.yaml  publish.yml
charts/: README.md
charts/vc-authn-oidc/: Chart.yaml  README.md  values.yaml
charts/vc-authn-oidc/charts/: common-2.19.2.tgz  common-2.19.3.tgz  mongodb-13.13.1.tgz  mongodb-13.9.2.tgz  (+1 more)
demo/: PWDRun  PWDdown  PWDrun  README.md  Running-In-Play-With-Docker.md  ngrok.yml  presentationRequest.json  updatePresentation
demo/docker/: docker-compose.yml  manage
demo/oidc-angular/: .dockerignore  Dockerfile  README.md  angular.json  karma.conf.js  package-lock.json  package.json
demo/oidc-django/: manage.py  requirements.txt  run-prod.sh
demo/scripts/: start-ngrok.sh
demo/vue/: .codeclimate.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  CODE-OF-CONDUCT.md  COMPLIANCE.yaml  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Jenkinsfile.cicd  README.md  SECURITY.md  docker-compose.yaml  vetur.config.js
docker/: .env-example  db_init.sql  docker-compose-ngrok.yaml  docker-compose.local-debug.yml  docker-compose.local-instance.yml  docker-compose.yaml  docker-compose.yml  manage  ngrok.yml  wallet_init.py
docker/agent/: Dockerfile
docker/keycloak-config/: master.json
docker/mongo/: mongo-init.js
docker/oidc-controller/: Dockerfile  Dockerfile.dev  sessiontimeout.json
docs/: 2_0_ConfigurationGuid.md  2_0_ConfigurationGuide.md  BestPractices.md  ConfigurationGuide.md  DemoInstructions.md  MigrationGuide.md  README.md  vc-authn-oidc-flow.puml
helm/vc-authn-oidc/: Chart.yaml  myvalues.yaml  values.yaml
jenkins/vc-authn-oidc/: DeployToProd-Jenkinsfile  DeployToProd-Jenkinsfile.pipeline.param  DeployToTest-Jenkinsfile  DeployToTest-Jenkinsfile.pipeline.param  Jenkinsfile  Jenkinsfile.pipeline.param
oidc-controller/: .coveragerc  Dockerfile  alembic.ini  conftest.py  docker-entrypoint.sh  oidc_op_config.json  passwd.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini  users.json
oidc-controller/api/: logconf.json  logging.conf  main.py  test_utils.py
oidc-controller/private/: cookie_jwks.json  jwks.json  token_jwks.json
oidc-controller/src/: .gitignore  VCAuthn.sln
oidc-controller/static/: jwks.json
oidc-controller/tests/: test_signing_key.pem
openshift/: README.md  TestConnections.txt  settings.sh
openshift/policies/: deploy-env-policies.yaml  pods-to-external-network.yaml
scripts/: docker-compose.yaml
src/: .gitignore  Dockerfile  docker-compose.yml  wait-for-it.sh
src/VCAuthn/: Program.cs  Startup.cs  StorageDbContext.cs  VCAuthn.csproj  appsettings.json  log4net.config
src/demo/: README.md
(+406 files in other folders)
